Rework components walkthrough

--- a/20.1.md
+++ b/20.1.md
@@ -1,4 +1,4 @@
-# Don't rely on the parent template's variable scope.
+# Just make one.
 
 ```twig
 {# _news/index.twig #}
@@ -8,9 +8,7 @@
     limit: 10,
 }).all() %}
     <div>
-        {% include "_components/card" with {
-            entry: entry,
-        } only %}
+        {% include "_components/card" %}
     </div>
 {% endfor %}
 ```
