--- a/20.2.md
+++ b/20.2.md
@@ -1,8 +1,4 @@
-# Don't rely on an element's content model.
-
-It's good practice to make your component's data agnostic.
-
-Let's you easily do things like eagerload an asset in one spot but not in another or use the component with a category and not with an entry. Also helps with static data for prototyping in the early stages of a project.
+# Don't rely on the parent template's variable scope.
 
 ```twig
 {# _news/index.twig #}
@@ -13,27 +9,7 @@ Let's you easily do things like eagerload an asset in one spot but not in anothe
 }).all() %}
     <div>
         {% include "_components/card" with {
-            image: entry.listingImage.one(),
-            heading: entry.title,
-            description: entry.description,
-        } only %}
-    </div>
-{% endfor %}
-```
-
-```twig
-{# _news/index-alt.twig #}
-
-{% for entry in craft.entries({
-    section: "news",
-    limit: 10,
-    with: ["listingImage"],
-}).all() %}
-    <div>
-        {% include "_components/card" with {
-            image: entry.listingImage|slice(0, 1),
-            heading: entry.title,
-            description: entry.description,
+            entry: entry,
         } only %}
     </div>
 {% endfor %}
@@ -43,12 +19,10 @@ Let's you easily do things like eagerload an asset in one spot but not in anothe
 {# _components/card.twig #}
 
 <div>
-    {% if image %}
-        <img src="{{ asset.image }}" alt="">
-    {% endif %}
-    {% if heading %}
-        <h3>{{ heading }}</h3>
-    {% endif %}
-    {{ description }}
+    {% for asset in entry.listingImage.limit(1).all() %}
+        <img src="{{ asset.url }}" alt="">
+    {% endfor %}
+    <h3>{{ entry.title }}</h3>
+    {{ entry.description }}
 </div>
 ```
