--- a/20.3.md
+++ b/20.3.md
@@ -1,10 +1,8 @@
-# Declare all variables first
+# Don't rely on an element's content model.
 
-This allows you a better defense against what is being passed through.
+It's good practice to make your component's data agnostic.
 
-And allows opportunity to set defaults.
-
-It also provides more clarity and a little separation between data and markup.
+Let's you easily do things like eagerload an asset in one spot but not in another or use the component with a category and not with an entry. Also helps with static data for prototyping in the early stages of a project.
 
 ```twig
 {# _news/index.twig #}
@@ -24,17 +22,33 @@ It also provides more clarity and a little separation between data and markup.
 ```
 
 ```twig
-{# _components/card.twig #}
+{# _news/index-alt.twig #}
 
-{% set image = image ?? null %}
-{% set heading = heading ?? "Lorem ipsum dolor sit amet" %}
-{% set description = description ?? null %}
+{% for entry in craft.entries({
+    section: "news",
+    limit: 10,
+    with: ["listingImage"],
+}).all() %}
+    <div>
+        {% include "_components/card" with {
+            image: entry.listingImage|slice(0, 1),
+            heading: entry.title,
+            description: entry.description,
+        } only %}
+    </div>
+{% endfor %}
+```
+
+```twig
+{# _components/card.twig #}
 
 <div>
     {% if image %}
         <img src="{{ asset.image }}" alt="">
     {% endif %}
-    <h3>{{ heading }}</h3>
+    {% if heading %}
+        <h3>{{ heading }}</h3>
+    {% endif %}
     {{ description }}
 </div>
 ```
