--- a/20.4.md
+++ b/20.4.md
@@ -1,8 +1,10 @@
-# Survive and thrive.
+# Declare all variables first
 
-Right before launch, the client request a new card layout that re-uses everything except the heading style?
+This allows you a better defense against what is being passed through.
 
-Easily use your include as an embed where needed.
+And give you an opportunity to set defaults.
+
+It also provides more clarity and a little separation between data and markup.
 
 ```twig
 {# _news/index.twig #}
@@ -12,16 +14,11 @@ Easily use your include as an embed where needed.
     limit: 10,
 }).all() %}
     <div>
-        {% embed "_components/card" with {
+        {% include "_components/card" with {
             image: entry.listingImage.one(),
+            heading: entry.title,
             description: entry.description,
         } only %}
-            {% block heading %}
-                {% include "_components/_special-hdg" with {
-                    text: entry.title,
-                } only %}
-            {% endblock %}
-        {% endembed %}
     </div>
 {% endfor %}
 ```
@@ -37,9 +34,7 @@ Easily use your include as an embed where needed.
     {% if image %}
         <img src="{{ asset.image }}" alt="">
     {% endif %}
-    {% block heading %}
-        <h3>{{ heading }}</h3>
-    {% endblock %}
+    <h3>{{ heading }}</h3>
     {{ description }}
 </div>
 ```
