--- a/20.3.md
+++ b/20.3.md
@@ -44,7 +44,7 @@ Let's you easily do things like eagerload an asset in one spot but not in anothe
 
 <div>
     {% if image %}
-        <img src="{{ asset.image }}" alt="">
+        <img src="{{ image }}" alt="">
     {% endif %}
     {% if heading %}
         <h3>{{ heading }}</h3>
