--- a/20.4.md
+++ b/20.4.md
@@ -32,7 +32,7 @@ It also provides more clarity and a little separation between data and markup.
 
 <div>
     {% if image %}
-        <img src="{{ asset.image }}" alt="">
+        <img src="{{ image }}" alt="">
     {% endif %}
     <h3>{{ heading }}</h3>
     {{ description }}
