--- a/20.5.md
+++ b/20.5.md
@@ -31,7 +31,7 @@ Instead of duplicating the card component and changing the contents, you can use
 <div>
     {% block main %}
         {% if image %}
-            <img src="{{ asset.image }}" alt="">
+            <img src="{{ image }}" alt="">
         {% endif %}
         <h3>{{ heading }}</h3>
         {{ description }}
