--- a/20.6-componentizing.md
+++ b/20.6-componentizing.md
@@ -1,3 +1,37 @@
+# Embeds
+
+Embeds rock.
+
+They are for big structures:
+
+```
+{#
+	--- Example Usage ---
+
+	{% embed "_components/_content-w-sidebar" %}
+		{% block content %}
+			<p>CONTENT</p>
+		{% endblock %}
+
+		{% block sidebar %}
+			<p>SIDEBAR</p>
+		{% endblock %}
+	{% endembed %}
+#}
+
+<div class="space-y-16 lg:flex lg:space-y-0 lg:space-x-32">
+	<div>
+		{% block content %}{% endblock %}
+	</div>
+	<div class="flex-shrink-0 lg:w-88 xl:w-106">
+		{% block sidebar %}{% endblock %}
+	</div>
+</div>
+```
+
+They can be used for smaller components too:
+
+```
 {#
 	--- Example Usage ---
 
@@ -40,3 +74,4 @@
 		{{ text }}
 	{% endblock %}
 </{{ tag }}>
+```
