--- a/20.1-componentizing.md
+++ b/20.1-componentizing.md
@@ -1,5 +1,7 @@
 # Just make one.
 
+<!-- {% raw %} -->
+
 ```twig
 {# _news/index.twig #}
 
@@ -13,6 +15,8 @@
 {% endfor %}
 ```
 
+<!-- {% raw %} -->
+
 ```twig
 {# _components/card.twig #}
 
@@ -24,3 +28,5 @@
     {{ entry.description }}
 </div>
 ```
+
+<!-- {% endraw %}) -->
