--- a/20.2-componentizing.md
+++ b/20.2-componentizing.md
@@ -1,5 +1,7 @@
 # Don't rely on the parent template's variable scope.
 
+<!-- {% raw %} -->
+
 ```twig
 {# _news/index.twig #}
 
@@ -15,6 +17,8 @@
 {% endfor %}
 ```
 
+<!-- {% raw %} -->
+
 ```twig
 {# _components/card.twig #}
 
@@ -26,3 +30,5 @@
     {{ entry.description }}
 </div>
 ```
+
+<!-- {% endraw %}) -->
