--- a/20.3-componentizing.md
+++ b/20.3-componentizing.md
@@ -4,6 +4,8 @@ It's good practice to make your component's data agnostic.
 
 Let's you easily do things like eagerload an asset in one spot but not in another or use the component with a category and not with an entry. Also helps with static data for prototyping in the early stages of a project.
 
+<!-- {% raw %} -->
+
 ```twig
 {# _news/index.twig #}
 
@@ -52,3 +54,5 @@ Let's you easily do things like eagerload an asset in one spot but not in anothe
     {{ description }}
 </div>
 ```
+
+<!-- {% endraw %}) -->
