--- a/20.4-componentizing.md
+++ b/20.4-componentizing.md
@@ -6,6 +6,8 @@ And give you an opportunity to set defaults.
 
 It also provides more clarity and a little separation between data and markup.
 
+<!-- {% raw %} -->
+
 ```twig
 {# _news/index.twig #}
 
@@ -38,3 +40,5 @@ It also provides more clarity and a little separation between data and markup.
     {{ description }}
 </div>
 ```
+
+<!-- {% endraw %}) -->
