--- a/20.5-componentizing.md
+++ b/20.5-componentizing.md
@@ -4,6 +4,8 @@ Right before launch, the client request a one-off new card layout that re-uses t
 
 Instead of duplicating the card component and changing the contents, you can use your include as an embed where needed.
 
+<!-- {% raw %} -->
+
 ```twig
 {# _news/index.twig #}
 
@@ -38,3 +40,5 @@ Instead of duplicating the card component and changing the contents, you can use
     {% endblock %}
 </div>
 ```
+
+<!-- {% endraw %}) -->
