--- a/40.1-php.md
+++ b/40.1-php.md
@@ -1,5 +1,7 @@
 # Don't Use Twig: behaviors!
 
+<!-- {% raw %} -->
+
 ```php
 <?php
 namespace modules\appmodule\behaviors;
@@ -26,7 +28,11 @@ class Product extends \yii\base\Behavior
 }
 ```
 
+<!-- {% endraw %}) -->
+
 You now have access to all these methods from Twig or PHP:
+
+<!-- {% raw %} -->
 
 ```twig
 {% if entry.getIsActive() %}
@@ -34,6 +40,6 @@ You now have access to all these methods from Twig or PHP:
         {{ review.body }}
     {% endfor %}
 {% endif %}
-
-
 ```
+
+<!-- {% endraw %}) -->
