--- a/20.6-componentizing.md
+++ b/20.6-componentizing.md
@@ -4,6 +4,8 @@ Embeds rock.
 
 They are for big structures:
 
+<!-- {% raw %} -->
+
 ```
 {#
 	--- Example Usage ---
@@ -75,3 +77,5 @@ They can be used for smaller components too:
 	{% endblock %}
 </{{ tag }}>
 ```
+
+<!-- {% endraw %}) -->
