--- a/40.1-php.md
+++ b/40.1-php.md
@@ -36,7 +36,7 @@ You now have access to all these methods from Twig or PHP:
 
 ```twig
 {% if entry.getIsActive() %}
-    {% for review in entry.getReviews %}
+    {% for review in entry.getReviews() %}
         {{ review.body }}
     {% endfor %}
 {% endif %}
